# x2t-pypi

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/connector/: tiktok.py
tests/: __init__.py  test_exception.py
x2t/: __init__.py  exception.py  tiktok.py
