[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2ttech"
version = "0.2.0"
dependencies = ["requests"]
authors = [{name = "x2T Technique", email = "x2t.technique@gmail.com"}]
maintainers = [
  {name = "Bùi Đức Tuấn", email = "buiductuan12081995@gmail.com"},
  {name= "Nguyễn Thị Phương Tâm", email = "phuongtam128@gmail.com"}
]
requires-python = ">= 3.8"
description = "A Python library for amazing functionality"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
keywords = ["erp", "tiktok", "odoo"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]


[project.urls]
Homepage = "https://x2t.tech"
Repository = "https://github.com/x2TTechnique/x2t-pypi"
Issues = "https://github.com/x2TTechnique/x2t-pypi/issues"
Changelog = "https://github.com/x2TTechnique/x2t-pypi/blob/master/CHANGELOG.md"


